Navigatiebar text-align fix

--- a/app.css
+++ b/app.css
@@ -324,6 +324,9 @@ footer{
     .icon{align-items:right; visibility:hidden;}
     .footer-top, .footer-bottom{width: 100%; position:relative; visibility:hidden;}
     .nav-list li{float: none;}
+    .nav-list li a{padding:0px;}
+    .navbar {display:block;}
+    .navbar hr{visibility:hidden}
     .project-titel{padding:0px; text-align:left;}
     .buffer{visibility: hidden;}
 }
